# pycodex

./: .gitignore  AGENTS.md  README.md  README_ZH.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: ALIGNMENT.md  CONTEXT.md
docs/responses_server/: README.md
pycodex/: __init__.py  agent.py  cli.py  collaboration.py  compat.py  context.py  doctor.py  feishu_card.py  feishu_link.py  http_compat.py  interactive_session.py  model.py  portable.py  portable_server.py  protocol.py  runtime.py  runtime_services.py
pycodex/prompts/: collaboration_default.md  exec_tools.json  models.json  subagent_tools.json
pycodex/tools/: __init__.py  agent_tool_schemas.py  apply_patch_tool.py  base_tool.py  close_agent_tool.py  code_mode_manager.py  exec_command_tool.py  exec_runtime.js  exec_tool.py  grep_files_tool.py  ipython_tool.py  list_dir_tool.py  read_file_tool.py  request_permissions_tool.py  request_user_input_tool.py  resume_agent_tool.py  send_input_tool.py  shell_command_tool.py  shell_tool.py  spawn_agent_tool.py  unified_exec_manager.py  update_plan_tool.py  view_image_tool.py  wait_agent_tool.py  wait_tool.py  web_search_tool.py  write_stdin_tool.py
pycodex/utils/: __init__.py  async_bridge.py  compactor.py  debug.py  dotenv.py  get_env.py  random_ids.py  session_persist.py  toolcall_visualize.py  truncation.py  visualize.py
responses_server/: __init__.py  app.py  config.py  messages_api.py  payload_processors.py  server.py  session_store.py  stream_router.py  trajectory_dump.py
responses_server/tools/: __init__.py  custom_adapter.py  web_search.py
tests/: TESTS.md  __init__.py  compare_request_user_input_roundtrip.py  compare_steer_request_bodies.py  compare_tool_schemas.py  fake_responses_server.py  fakes.py  test_agent.py  test_async_bridge.py  test_builtin_tools.py  test_cli.py  test_compactor.py  test_context.py  test_doctor.py  test_fake_responses_server.py  test_feishu_card.py  test_feishu_link.py  test_ipython_tool.py  test_model.py  test_portable.py  test_py36_syntax.py  test_visualize.py  test_workspace_server.py
tests/responses_server/: fake_chat_completions_server.py  test_server.py
tools/: feishu_oauth.py
workspace_server/: __init__.py  app.py  workspace.html  workspaces.html  workspaces.py
